--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "5.13.8"
   }
 }
