--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/devglima/nodejs-sample#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mongodb": "^4.6.0",
     "mongoose": "5.13.8"
   }
