--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/devglima/nodejs-sample#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
