--- a/package.json
+++ b/package.json
@@ -1,31 +1,47 @@
 {
-  "name": "nodejs-sample",
-  "version": "1.0.0",
-  "description": "",
-  "type":"module",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/devglima/nodejs-sample.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/devglima/nodejs-sample/issues"
-  },
-  "homepage": "https://github.com/devglima/nodejs-sample#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "dotenv-safe": "^8.2.0",
-    "express": "^4.18.1",
-    "fs": "^0.0.1-security",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.6.0",
-    "mongoose": "5.13.8"
-  }
+   "name": "nodejs-sample",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "type": "module",
+   "scripts": {
+      "dev": "nodemon --exec babel-node ./server.js",
+      "build": "babel ./server.js --out-file ./build/server.js",
+      "start": "node server",
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/devglima/nodejs-sample.git"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/devglima/nodejs-sample/issues"
+   },
+   "homepage": "https://github.com/devglima/nodejs-sample#readme",
+   "dependencies": {
+      "bcryptjs": "^2.4.3",
+      "body-parser": "^1.20.0",
+      "cors": "^2.8.5",
+      "dotenv-safe": "^8.2.0",
+      "express": "^4.18.1",
+      "express-validator": "^6.14.1",
+      "express-yup-middleware": "^1.2.3",
+      "fs": "^0.0.1-security",
+      "jsonwebtoken": "^8.5.1",
+      "mongodb": "^4.6.0",
+      "mongoose": "5.13.8",
+      "yup": "^0.32.11"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.18.2",
+      "@babel/node": "^7.17.10",
+      "@babel/preset-env": "^7.18.2",
+      "babel-plugin-module-resolver": "^4.1.0",
+      "eslint": "^8.16.0",
+      "nodemon": "^2.0.16",
+      "prettier": "2.6.2"
+   }
 }
