--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "index.js",
    "type": "module",
    "scripts": {
-      "dev": "nodemon --exec babel-node ./server.js",
+      "dev": "nodemon --exec babel-node ./app.js",
       "build": "babel ./ --out-dir dist --copy-files --no-copy-ignored",
       "start": "node server",
       "test": "echo \"Error: no test specified\" && exit 1"
