--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "dev": "nodemon --exec babel-node ./app.js",
       "build": "babel ./ --out-dir dist --copy-files --no-copy-ignored",
       "start": "node server",
-      "test": "jest"
+      "test": "jest --detectOpenHandles"
    },
    "repository": {
       "type": "git",
@@ -29,12 +29,12 @@
       "cors": "^2.8.5",
       "dotenv-safe": "^8.2.0",
       "express": "^4.18.1",
-      "express-validator": "^6.14.1",
       "express-yup-middleware": "^1.2.3",
       "fs": "^0.0.1-security",
       "jsonwebtoken": "^8.5.1",
       "mongodb": "^4.6.0",
       "mongoose": "^5.13.8",
+      "mongoose-sequence": "^5.3.1",
       "yup": "^0.32.11"
    },
    "devDependencies": {
