--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
    "dependencies": {
       "@babel/cli": "^7.17.10",
       "@babel/core": "^7.18.2",
+      "axios": "^0.27.2",
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.20.0",
       "cors": "^2.8.5",
