--- a/package.json
+++ b/package.json
@@ -2,40 +2,29 @@
    "name": "nodejs-sample",
    "version": "1.0.0",
    "description": "",
-   "main": "index.js",
+   "main": "app.js",
    "type": "module",
    "scripts": {
-      "dev": "nodemon --exec babel-node ./app.js",
-      "build": "babel ./ --out-dir dist --copy-files --no-copy-ignored",
-      "start": "node server",
+      "dev": "nodemon --exec babel-node ./src/app.js",
+      "build": "babel src -d dist",
+      "deploy": "./deploy.sh",
+      "start": "node ./dist/app.js",
       "test": "jest --detectOpenHandles"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/devglima/nodejs-sample.git"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/devglima/nodejs-sample/issues"
-   },
-   "homepage": "https://github.com/devglima/nodejs-sample#readme",
    "dependencies": {
-      "@babel/cli": "^7.17.10",
-      "@babel/core": "^7.18.2",
       "axios": "^0.27.2",
       "bcryptjs": "^2.4.3",
-      "body-parser": "^1.20.0",
       "cors": "^2.8.5",
       "dotenv-safe": "^8.2.0",
       "express": "^4.18.1",
       "express-yup-middleware": "^1.2.3",
-      "fs": "^0.0.1-security",
       "jsonwebtoken": "^8.5.1",
-      "mongodb": "^4.6.0",
       "mongoose": "^5.13.8",
       "mongoose-sequence": "^5.3.1",
+      "serverless-http": "^2.7.0",
       "yup": "^0.32.11"
    },
    "devDependencies": {
@@ -46,6 +35,7 @@
       "jest": "^28.1.0",
       "nodemon": "^2.0.16",
       "prettier": "2.6.2",
+      "serverless-ignore": "^0.2.1",
       "supertest": "^6.2.3"
    }
 }
