--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
       "express": "^4.18.1",
       "express-yup-middleware": "^1.2.3",
       "jsonwebtoken": "^8.5.1",
+      "moment": "^2.29.3",
       "mongoose": "^5.13.8",
       "mongoose-sequence": "^5.3.1",
       "serverless-http": "^2.7.0",
+      "uuid": "^8.3.2",
       "yup": "^0.32.11"
    },
    "devDependencies": {
