--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "jsonwebtoken": "^8.5.1",
       "moment": "^2.29.3",
       "mongoose": "^5.13.8",
+      "mongoose-paginate-v2": "^1.7.0",
       "mongoose-sequence": "^5.3.1",
       "serverless-http": "^2.7.0",
       "uuid": "^8.3.2",
